# ci-cd-pipeline-setup

./: LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml
src/: version.py
src/tests/: test_example.py
